--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name edml)
  (inline_tests)
- (libraries eio_main)
+ (libraries ansi)
  (preprocess (pps 
     ppx_inline_test
     ppx_deriving.eq
