--- a/bin/dune
+++ b/bin/dune
@@ -2,5 +2,5 @@
  (package edml)
  (public_name edml)
  (name main)
- (libraries edml)
+ (libraries edml keymaps)
  (preprocess (pps ppx_deriving.eq)))
