--- a/tree_sitter/dune
+++ b/tree_sitter/dune
@@ -1,17 +1,3 @@
-; (library
-;   (name tree_sitter)
-;   (libraries ctypes ctypes-foreign)
-;   (foreign_stubs 
-;     (language c) (names tree_sitter)
-;     (flags
-;       :standard 
-;       -I${ocaml:include_dir}
-;       -I%{env:TREE_SITTER_INC=/usr/local/lib}
-;       -L%{env:TREE_SITTER_LIB=/usr/local/include}
-;       -ltree-sitter))
-;   (c_library_flags
-;     (-L%{env:TREE_SITTER_LIB=/usr/local/include}
-;      -Wl,-rpath,%{env:TREE_SITTER_LIB=/usr/local/include})))
 (library
   (name tree_sitter)
   (modules tree_sitter)
@@ -25,13 +11,23 @@
 (rule
   (targets tree_sitter_stubs.c tree_sitter_generated.ml)
   (deps stub_generator.exe)
-  (action (run %{deps})))
+  (action 
+    (run %{deps})))
+
+
 
 (library
   (name tree_sitter_generated)
   (modules tree_sitter_generated)
-  (c_library_flags -ltree-sitter)
+  (c_library_flags
+    -L%{env:LANGUAGES_DIR=/usr/local/lib}/javascript
+    -ltree-sitter-javascript
+    -L%{env:TSLIB=/usr/local/lib} 
+    -ltree-sitter)
   (foreign_stubs
     (language c)
-    (names tree_sitter_stubs))
+    (names tree_sitter_stubs)
+    (flags 
+      -I%{env:TSINC=/usr/local/include}
+      -I%{workspace_root}/languages/javascript))
   (libraries ctypes.stubs))
