--- a/edml/dune
+++ b/edml/dune
@@ -1,7 +1,7 @@
 (library
   (name edml)
   (inline_tests)
-  (libraries core ansi)
+  (libraries core ansi assertions)
   (preprocess (pps
     ppx_inline_test
     ppx_deriving.show
