--- a/edml/dune
+++ b/edml/dune
@@ -4,5 +4,8 @@
   (libraries core ansi assertions tree_sitter)
   (preprocess (pps
     ppx_inline_test
+    ppx_sexp_conv
+    ppx_hash
+    ppx_compare
     ppx_deriving.show
     ppx_deriving.eq)))
