--- a/bin/dune
+++ b/bin/dune
@@ -2,5 +2,5 @@
  (package edml)
  (public_name edml)
  (name main)
- (libraries edml keymaps tree_sitter)
+ (libraries edml tree_sitter)
  (preprocess (pps ppx_deriving.eq)))
