--- a/edml_term/dune
+++ b/edml_term/dune
@@ -1,6 +1,5 @@
-(library
-  (name edml_term)
-  (libraries core edml)
-  (preprocess (pps
-    ppx_deriving.eq
-    ppx_deriving.show)))
+(executable
+  (package edml_term)
+  (name main)
+  (public_name edml_term)
+  (libraries edml_term_lib))
