--- a/edml_term/lib/tests/dune
+++ b/edml_term/lib/tests/dune
@@ -1,7 +1,7 @@
 (library
   (name edml_term_tests)
   (inline_tests)
-  (libraries edml_term fmt core edml)
+  (libraries edml_term_lib fmt core edml)
   (preprocess (pps
     ppx_deriving.eq
     ppx_deriving.show
