--- a/edml/dune
+++ b/edml/dune
@@ -1,7 +1,7 @@
 (library
   (name edml)
   (inline_tests)
-  (libraries core ansi assertions tree_sitter trie)
+  (libraries core ansi assertions tree_sitter trie logger)
   (preprocess (pps
     ppx_inline_test
     ppx_sexp_conv
