--- a/ansi/dune
+++ b/ansi/dune
@@ -1,7 +1,7 @@
 (library
  (name ansi)
  (inline_tests)
- (libraries unix fmt core core_unix)
+ (libraries unix fmt core core_unix logger)
  (foreign_stubs (language c) (names terminal))
  (preprocess (pps 
     ppx_inline_test
