--- a/edml_term/lib/dune
+++ b/edml_term/lib/dune
@@ -1,6 +1,8 @@
 (library
   (name edml_term_lib)
+  (inline_tests)
   (libraries core edml)
   (preprocess (pps
+    ppx_inline_test
     ppx_deriving.eq
     ppx_deriving.show)))
